# what-is-functional-programming

./: Cargo.toml  README.md
examples/: data_filtering.rs  error_handling.rs  parallel_compute.rs  state_machine.rs
src/: lib.rs
